# sports-calendar

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
config/: app_config.yml  base.yml  infrastructure.yml  logging.yml  logging_config.yml  runtime.yml
config/app/: dev_config.yml  scopes.yml
config/selections/: dev.yml
dev_tools/: log_viewer.py  run_logs.sh
docs/: google-calendars.md  google-credentials.md  ideas.md  selections.md
selections/: dev.yml  jolan.yml
src/: __init__.py  __main__.py  admin_utils.py  cli.py  main.py  utils.py
src/api_connection/: football_api_connector.py
src/app/: __init__.py  competition_stages.py  main.py  orchestration.py  runner.py
src/app/models/: base.py  (+2 more)
src/calendar/: __init__.py  football_calendar.py  google_calendar_manager.py
src/calendar_creation/: __init__.py  calendar.py
src/cli/: calendar.py  main.py  pipeline.py  utils.py
src/cli_utils/: __init__.py  args_config.py  logging_config.py
src/clients/: utils.py
src/config/: __init__.py  app_config.py  args_config.py  base.py  base_config.py  constants.py  container.py  credentials.py  env_config.py  loader.py  logging.py  logging_config.py  main.py  manager.py  pipeline.py  pipeline_config.py  registry.py  secrets.py  utils.py  yaml_loader.py
src/data_access/: models.py
src/data_pipeline/: __init__.py  main.py  orchestration.py  pipeline_orchestration.py  pipeline_stages.py  repository_manager.py  types.py  utils.py
src/data_processing/: main_workflow.py  utils.py
src/db/: __init__.py  database.py  helpers.py  models.py
src/db_legacy/: __init__.py  database.py  helpers.py  seed.py
src/file_io/: __init__.py  base_file_handler.py  csv_handler.py  file_handler.py  file_handler_factory.py  json_handler.py  metadata_manager.py
src/fixture_pipeline/: main.py
src/football_data_source/: football_api_connector.py
src/football_data_source_deprecated/: football_api_connector.py
src/ingestion/: ingestion_workflow.py
src/live_soccer_source/: __init__.py  competitions_data.json  data_scraping.py
src/live_soccer_source_deprecated/: data_scraping.py  new_feature_playground.py
src/models_deprecated/: __init__.py  selection.py  selection_items.py
src/pipeline/: __init__.py
src/registry_manager/: registry.py
src/scraper_db/: __init__.py  data_scraper.py  database_manager.py  espn_api_client.py  football_ranking_scraper.py  livesoccer_scraper.py  pipeline.py
src/selection/: selection.py
src/selection_legacy/: __init__.py  selection.py
src/sources/: __init__.py  database_manager.py
src/specs/: __init__.py  base.py
src/sports_calendar/: cli.py
src/utils/: __init__.py  datastage.py  loader.py  types.py
tests/: test_base_api_client.py  test_data_processing_utils.py  test_espn_api_client.py  test_file_handler.py  test_order_models.py
(+493 files in other folders)
