[tool.poetry]
name = "football-calendar"
version = "0.1.0"
description = "Football calendar project"
authors = ["Jolan <jolan11.dubois@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
PyYAML = "^6.0.2"
icalendar = "^6.1.0"
pandas = "^2.2.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
cloudscraper = "^1.2.71"
google-api-python-client = "^2.160.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
ics = "^0.7.2"
python-dotenv = "^1.1.0"
SQLAlchemy = "^2.0.40"
RapidFuzz = "^3.13.0"
typer = "^0.16.0"
networkx = "^3.5"
cattrs = "^25.1.1"
python-json-logger = "^3.3.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.5"
coverage = "^7.8.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
